tests/ui/sized/stack-overflow-trait-infer-98842.stderr
error[E0391]: cycle detected when computing layout of `Foo`
  --> $DIR/stack-overflow-trait-infer-98842.rs:8:1
   |
LL | struct Foo(<&'static Foo as ::core::ops::Deref>::Target);
   | ^^^^^^^^^^
   |
note: ...which requires computing layout of `<&'static Foo as core::ops::deref::Deref>::Target`...
  --> $SRC_DIR/core/src/ops/deref.rs:LL:COL
   = note: ...which again requires computing layout of `Foo`, completing the cycle
note: cycle used when const-evaluating + checking `_`
  --> $DIR/stack-overflow-trait-infer-98842.rs:13:1
   |
LL | const _: *const Foo = 0 as _;
   | ^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
